--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/wunder-octopuss-photogenicus/main#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "node-fetch": "^2.3.0",
     "pg": "^8.5.1",
